# irc

./: Makefile.am  autogen.sh  cleanup.sh  configure.ac
client/: Connection.cpp  Connection.h  ConnectionDelegate.h  IrcClient.cpp  IrcClient.h  IrcMessage.h  Makefile.am  main.cpp
